--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -11,9 +12,13 @@
   "license": "ISC",
   "description": "Tech Wiki Mern project",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
 }
