--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.6.2",
+    "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
